# goldilocks_kpoints

./: .gitignore  LICENSE  README 2.md  README.md  pyproject.toml
configs/: alignn.yaml  cgcnn.yaml  crabnet.yaml  ensembles.yaml
data_preprocessing/: goldilocks-pre-processing.py  jarvis-pre-processing.py  jarvis-to-cgcnn.py  junwen-pre-processing.py  mp-pre-processing.py  mp-to-cgcnn.py
datamodules/: alignn_graph.py  cgcnn_graph.py  crabnet_datamodule.py  datamodule.py  geocgcnn_graph.py  gnn_datamodule.py  lmdb_dataset.py
embeddings/: atom_init_with_sssp_cutoffs.json  magpie.json  mat2vec.json  matscholar.json  oliynyk.json
models/: alignn.py  cgcnn.py  crabnet.py  dummy.py  ensembles.py  kingcrab.py  modelmodule.py  quntile_conformalised_regression.py
notebooks/: ALIGNN-CQR.ipynb  CGCNNN_results.ipynb  Data-exploration.ipynb  Ensembles_results.ipynb  Jarvis-vs-QE.ipynb  RF-CQR.ipynb  RF-feature-importance.ipynb  Simple-models.ipynb  Surrogate-model.ipynb  Wall-time.ipynb
notebooks/.ipynb_checkpoints/: Ensembles_results-checkpoint.ipynb  Graphs-checkpoint.ipynb  Jarvis-vs-QE-checkpoint.ipynb
output/GB/: GB_basic.csv  GB_basic_quantile_10.csv
output/RF/: RF_basic.csv  RF_basic.txt  RF_basic_quantile_10.csv  RF_basic_quantile_90.csv
output/cgcnn/: cgcnn_basic_l1robust.csv  cgcnn_basic_l1robust.txt  cgcnn_basic_l2robust_regularization.csv  cgcnn_basic_mse.csv  cgcnn_basic_mse.txt  cgcnn_basic_quantile_10.csv  cgcnn_basic_quantile_90.csv  cgcnn_basic_quantile_95.csv  cgcnn_basic_r2robust.csv  cgcnn_basic_r2robust.txt  cgcnn_basic_student_nu2.txt  cgcnn_basic_student_nu3.txt  cgcnn_basic_student_nu5.txt  cgcnn_basic_studentnu2.csv  cgcnn_basic_studentnu3.csv  cgcnn_student_nu5.csv  cgcnn_test.csv  l1robust_lattice_features.csv  quantile_0.9_lattice_features.csv
scripts/: predict.py  train.py
utils/: alignn_graph.py  atom_features_utils.py  cgcnn_graph.py  compound_features_utils.py  crabnet_utils.py  utils.py  weight_averaging_callback.py
utils/trained_is_metal_cgcnn/: is_metal.ckpt
