[tool.poetry]
name = "kpoints"
version = "0.1.0"
description = "kpoints models"
authors = ["Elena Patyukova <elena.patyukova@stfc.ac.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
torch = ">=2.7.0,<3.0.0"
pymatgen = "==2024.11.13"
ase = ">=3.25.0,<4.0.0"
pydantic = "==2.11.4"
pytest = ">=8.3.5,<9.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
ruff = ">=0.11.9,<0.12.0"
jarvis-tools = ">=2024.10.30,<2025.0.0"
mp-api = "==0.45.5"
requests = ">=2.32.3,<3.0.0"
bs4 = ">=0.0.2,<0.0.3"
scipy = ">=1.15.3,<2.0.0"
monty = "==2025.3.3"
pytest-cov = "^6.1.1"
coveralls = "^4.0.1"
urllib3 = ">=1.26,<2.0"
lightning = "^2.5.1.post0"
dgl = "2.0.0"
jupyter = "^1.1.1"
lmdb = "^1.6.2"
torch-geometric = "^2.6.1"
torch-scatter = "2.1.2"
torch-sparse = "0.6.18"
mlflow = "^2.22.0"
setproctitle = "1.2"
matminer = "^0.9.3"
dscribe = "^2.1.1"
lightgbm = "^4.6.0"

[tool.poetry.urls]
Repository = "https://github.com/ddmms/k_points"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
