[tool.poetry]
name = "kpoints"
version = "0.1.0"
description = "kpoints models"
authors = ["Elena Patyukova <elena.patyukova@stfc.ac.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
torch = "2.4.0"
pymatgen = "==2024.11.13"
ase = ">=3.25.0,<4.0.0"
pydantic = "==2.11.4"
pytest = ">=8.3.5,<9.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
ruff = ">=0.11.9,<0.12.0"
jarvis-tools = ">=2024.10.30,<2025.0.0"
mp-api = "==0.45.5"
requests = ">=2.32.3,<3.0.0"
bs4 = ">=0.0.2,<0.0.3"
scipy = ">=1.15.3,<2.0.0"
monty = "==2025.3.3"
pytest-cov = "^6.1.1"
coveralls = "^4.0.1"
urllib3 = ">=1.26,<2.0"
lightning = "^2.4"
dgl = "2.0.0"
jupyter = "^1.1.1"
lmdb = "^1.6.2"
mlflow = "^2.22.0"
setproctitle = "1.2"
matminer = "^0.9.3"
dscribe = "^2.1.1"
lightgbm = "^4.6.0"
transformers = "^4.54.1"
robocrys = "^0.2.11"
seaborn = "^0.13.2"
plotly = "^6.3.1"
kaleido = "^1.1.0"
pytorch-lightning = "^2.4"
pyg-lib = {url = "https://data.pyg.org/whl/torch-2.4.0+cpu/pyg_lib-0.4.0+pt24-cp311-cp311-macosx_14_0_universal2.whl"}
torch-cluster = {url = "https://data.pyg.org/whl/torch-2.4.0+cpu/torch_cluster-1.6.3-cp311-cp311-macosx_10_9_universal2.whl"}
torch-scatter = {url = "https://data.pyg.org/whl/torch-2.4.0+cpu/torch_scatter-2.1.2-cp311-cp311-macosx_10_9_universal2.whl"}
torch-sparse = {url = "https://data.pyg.org/whl/torch-2.4.0+cpu/torch_sparse-0.6.18-cp311-cp311-macosx_11_0_universal2.whl"}
torch-spline-conv = {url = "https://data.pyg.org/whl/torch-2.4.0+cpu/torch_spline_conv-1.2.2-cp311-cp311-macosx_10_9_universal2.whl"}
torch-geometric = "^2.7.0"
mapie = "^1.2.0"

[tool.poetry.urls]
Repository = "https://github.com/ddmms/k_points"

[[tool.poetry.source]]
name = "pyg"
url = "https://data.pyg.org/whl"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
